# ultrabingo

./: .gitignore  Changelog.md  Path.props  UltraBINGO.csproj  UltraBINGO.sln  licence.md  maps.md  readme.md
UltraBINGO/: UltraBINGO.csproj  bingo.assets
UltraBINGO/Source/: CampaignPatches.cs  GameManager.cs  Main.cs  ModConfig.cs  SteamManager.cs
UltraBINGO/src/: Assets.cs  BingoClasses.cs  CampaignPatches.cs  CommonFunctions.cs  GameManager.cs  Logging.cs  Main.cs  NetworkManager.cs  UIManager.cs
server/: Cargo.toml  diesel.toml  motd.txt
server/migrations/2025-07-22-174400_initial_setup/: down.sql  up.sql
server/src/: db.rs  enums.rs  info.rs  levels.rs  lib.rs  macros.rs  main.rs  messages.rs  models.rs  mods.rs  pools.rs  schema.rs  ticketing.rs  types.rs  util.rs
server/src/game/: controller.rs  grid.rs  mod.rs  models.rs
server/src/logger/: macros.rs  mod.rs
server/src/modes/: bingo.rs  domination.rs  mod.rs
server/src/rooms/: manager.rs  mod.rs  models.rs  pool.rs
server/src/server/: mod.rs  pools.rs  sockets.rs
src/: Assets.cs  BingoClasses.cs  CampaignPatches.cs  CommonFunctions.cs  GameManager.cs  Logging.cs  NetworkManager.cs  Plugin.cs  UIManager.cs
src/Components/: BingoChatManager.cs  BingoLevelData.cs  BingoLevelSquare.cs  BingoMapSelectionID.cs  BingoMenuManager.cs  BingoVoteManager.cs  DominationTimeManager.cs  MapPoolData.cs
src/HarmonyPatches/: AngryLevelDownloadFinished.cs  AngryStopNormalLoad.cs  CanvasController.cs  CheatDisabler.cs  LevelEndPanel.cs  LevelStatsPanel.cs  OptionsMenu.cs  PauseMenu.cs  ShopPatch.cs  (+1 more)
(+314 files in other folders)
