[package]
name = "bingo-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
axum = { version = "0.8.4", features = ["ws", "macros"] }
base64 = "0.22.1"
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
colored = "3.0.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel", "crossbeam-deque", "crossbeam-epoch", "crossbeam-queue"] }
derivative = "2.2.0"
diesel = { version = "2.2.12", features = ["r2d2", "returning_clauses_for_sqlite_3_35", "sqlite"] }
diesel-derive-enum = { version = "2.1.0", features = ["sqlite"] }
diesel-enum = "0.2.1"
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
indexmap = { version = "2.10.0", features = ["serde"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
md5 = "0.8.0"
once_cell = "1.21.3"
parking_lot = { version = "0.12.4", features = ["arc_lock", "serde"] }
phf = { version = "0.12.1", features = ["macros", "serde"] }
rand = "0.9.2"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_repr = "0.1.20"
serde_with = "3.14.0"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
toml = { version = "0.9.5", features = ["preserve_order"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
